unpackaged/main/default/objects/farmers__c/farmers__c.object-meta.xml
<CustomObject>
    <label>farmer</label>
    <nameField>
        <label>farmers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>farmers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>