unpackaged/main/default/objects/farmers__c/fields/Adress__c.field-meta.xml
<CustomField>
    <fullName>Adress__c</fullName>
    <label>Adress</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>