unpackaged/main/default/objects/farmers__c/fields/contact_number__c.field-meta.xml
<CustomField>
    <fullName>contact_number__c</fullName>
    <label>contact number</label>
    <type>Phone</type>
</CustomField>