unpackaged/main/default/objects/farmers__c/fields/Product_Detail__c.field-meta.xml
<CustomField>
    <fullName>Product_Detail__c</fullName>
    <label>Product Detail</label>
    <referenceTo>Product_Detail__c</referenceTo>
    <relationshipLabel>farmers</relationshipLabel>
    <relationshipName>farmers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>