unpackaged/main/default/objects/farmers__c/fields/status_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>status_of_Payment__c</fullName>
    <label>status of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>paid</fullName>
            </value>
            <value>
                <fullName>pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>